Finalisation de mon projet - Calculatrice Good Smeel

--- a/calculatrice_backend/src/main/webapp/WEB-INF/web.xml
+++ b/calculatrice_backend/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 </error-page>
 <error-page>
     <exception-type>fr.devavance.calculatrice.exceptions.NumberOfParameterException</exception-type>
-    <location>/Eerror-handler</location>
+    <location>/Error-handler</location>
 </error-page>
 <error-page>
     <exception-type>fr.devavance.calculatrice.exceptions.OperatorException</exception-type>
